@@ -27,6 +27,7 @@
 
 typedef enum
 {
+	RESIZE_MODE_SETUP,
 	RESIZE_MODE_RESIZE,
 	RESIZE_MODE_SHRINK,
 	RESIZE_MODE_SCROLL
