@@ -1,5 +1,8 @@
 2002-03-13  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* libs/gravity.c (ParseDirectionArgument):
+	fixed direction parsing
+
 	* fvwm/menus.c (get_menu_options):
 	fixed a compiler warning
 
